--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.qegle.konturtestapp"
+        applicationId "com.qegle.contactstestapp"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -17,9 +17,9 @@ android {
     }
 
     //for simple data class parcelize
-    androidExtensions {
-        experimental = true
-    }
+    androidExtensions { experimental = true }
+
+    dataBinding { enabled = true }
 
     buildTypes {
         release {
@@ -59,6 +59,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
+
+    implementation("me.tatarka.bindingcollectionadapter2:bindingcollectionadapter:3.1.1")
+    implementation("me.tatarka.bindingcollectionadapter2:bindingcollectionadapter-recyclerview:3.1.1")
 
     implementation "androidx.room:room-rxjava2:2.2.2"
     implementation "androidx.room:room-runtime:2.2.2"
