--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,12 +56,12 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.0'
 
-    implementation("me.tatarka.bindingcollectionadapter2:bindingcollectionadapter:3.1.1")
-    implementation("me.tatarka.bindingcollectionadapter2:bindingcollectionadapter-recyclerview:3.1.1")
+    implementation('me.tatarka.bindingcollectionadapter2:bindingcollectionadapter:3.2.0')
+    implementation('me.tatarka.bindingcollectionadapter2:bindingcollectionadapter-recyclerview:3.2.0')
 
     implementation "androidx.room:room-rxjava2:2.2.2"
     implementation "androidx.room:room-runtime:2.2.2"
